Fix typo in Setup

--- a/Workflow/info.plist
+++ b/Workflow/info.plist
@@ -1552,7 +1552,7 @@ echo -n "${target_file}"</string>
 	<key>readme</key>
 	<string>## Setup
 
-Reveal the Helper app in the Finder via the `:mangahelper` keyword. This is enough for make macOS to become aware of it and set an identifier for CBZ files.
+Reveal the Helper app in the Finder via the `:mangahelper` keyword. This is enough for macOS to become aware of it and set an identifier for CBZ files.
 
 ![Show helper app in Finder](images/about/helper.png)
 
